--- a/packages/frontend/src/components/modalLogout/modalLogout.module.css
+++ b/packages/frontend/src/components/modalLogout/modalLogout.module.css
@@ -1,3 +1,15 @@
+.modalOverlay {
+  opacity: 0.2;
+  background-color: grey;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
+  text-align: center;
+}
+
 .modalContainer {
   position: fixed;
   top: 50%;
