--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -21,9 +21,13 @@ code {
   width: 100%;
 }
 
-#root > div > div{
-padding: 0 16px;
-};
+#root > .MuiContainer-fixed {
+ padding: 0;
+}
+
+#root > .MuiBox-root > .MuiContainer-fixed {
+  padding: 0 16px;
+}
 
 link {
   text-decoration: none;
