--- a/packages/frontend/src/components/loader/loader.module.css
+++ b/packages/frontend/src/components/loader/loader.module.css
@@ -1,7 +1,17 @@
 .spinner {
   position: fixed;
-  margin: 0 auto;
-  bottom: 30%;
-  z-index: 20;
-  opacity: 0.8;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 9999;
 }
