--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -19,6 +19,9 @@ code {
 
 #root {
   width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 #root > .MuiContainer-fixed {
