--- a/packages/frontend/src/components/passwordSecureBar/passwordStrengthBar.module.css
+++ b/packages/frontend/src/components/passwordSecureBar/passwordStrengthBar.module.css
@@ -1,27 +1,30 @@
 .strengthBar {
   width: 100%;
-  height: 5px;
+  height: 4px;
   background-color: #e5f1ef;
   border-radius: 6px;
+  margin-bottom: 20px;
 }
 
 .strengthBarWeek {
-  background-color: #24cca7;
+  background-color: #FF6596;
   width: 25%;
-  height: 5px;
+  height: 4px;
   border-radius: 6px;
+
 }
 
 .strengthBarModerate {
-  background-color: #24cca7;
+  background-color: #fcff65;
   width: 50%;
-  height: 5px;
+  height: 4px;
   border-radius: 6px;
+
 }
 
 .strengthBarStrong {
-  background-color: #24cca7;
+  background-color: #24CCA7;
   width: 100%;
-  height: 5px;
+  height: 4px;
   border-radius: 6px;
 }
