--- a/packages/frontend/src/stylesheet/main.scss
+++ b/packages/frontend/src/stylesheet/main.scss
@@ -1,4 +1,5 @@
-@import './utils/colors';
+@import './vars';
+//@import './utils/colors';
 @import './utils/breakpoints';
 
 @import './base/fonts';
