--- a/packages/frontend/src/stylesheet/utils/colors.scss
+++ b/packages/frontend/src/stylesheet/utils/colors.scss
@@ -9,4 +9,6 @@
   --disabled-text: #e0e0e0;
   --error-text: #ff001b;
   --placeholder-text: #bdbdbd;
+  --color-transaction-border: #dcdcdf;
+  --transactions-line: #e7e5f2;
 }
