--- a/packages/frontend/src/components/navigation/navigation.scss
+++ b/packages/frontend/src/components/navigation/navigation.scss
@@ -67,7 +67,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 27px;
-  color: #000000;
+  color: var(--primary-text-color);
 
   @media screen and (max-width: $MaxMobileWidth) {
     display: none;
@@ -88,7 +88,7 @@
   }
 
   .nav_icon path {
-    fill: #4a56e2;
+    fill: var(--accent-blue);
   }
 }
 
