--- a/packages/frontend/src/stylesheet/base/common.scss
+++ b/packages/frontend/src/stylesheet/base/common.scss
@@ -2,6 +2,12 @@ body {
 	font-family: 'Poppins', 'Circe', 'CirceBold', sans-serif;
 	text-decoration: none;
 	background-color: var(--primary-background-color);
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  
+
 }
 
 h1,
