--- a/css/tableCard.css
+++ b/css/tableCard.css
@@ -1,4 +1,148 @@
-@import '../../stylesheet/main.scss';
+:root {
+  --white: #ffffff;
+  --secondary-text-color: #fff;
+  --accent-red: #ff6596;
+  --pink-dark: #ff6596;
+  --accent-blue: #4a56e2;
+  --purple-dark: #4a56e2;
+  --black: #000000;
+  --primary-text-color: #000;
+  --disabled-text: #e0e0e0;
+  --gray-text-modal: #e0e0e0;
+  --placeholder-text: #bdbdbd;
+  --gray-text-header: #bdbdbd;
+  --gray-background: #e7eaf2;
+  --secondary-background-color: #e7eaf2;
+  --green-light: #24cca7;
+  --accent-green: #24cca7;
+  --color-transaction-border: #dcdcdf;
+  --gray-divider-horizontal: #dcdcdf;
+  --transactions-line: #e7e5f2;
+  --gray-divider-vertical: #e7e5f2;
+  --error-text: #ff001b;
+  --gray-text-balance: #a6a6a6;
+  --gray-progress-line: #e5f1ef;
+  --purple-light: #6e78e8;
+  --purple-lightest: #c5baff;
+  --green-dark: #00ad84;
+  --pink-light: #fd9498;
+  --pink-lightest: #ffd8d0;
+  --blue: #81e1ff;
+  --yellow: #fed057;
+}
+
+@font-face {
+  font-family: "CirceBold";
+  src: url("../../assets/fonts/circe/circe_bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Circe";
+  src: url("../../assets/fonts/circe/circe.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../../assets/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../../assets/fonts/Poppins/Poppins-Bold.eot");
+  src: local("Poppins Bold"), local("Poppins-Bold"), url("../../assets/fonts/Poppins/Poppins-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+body {
+  font-family: "Poppins", "Circe", "CirceBold", sans-serif;
+  text-decoration: none;
+  background-color: var(--primary-background-color);
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0px;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  margin: 0px;
+  padding: 0px;
+}
+
+button {
+  text-decoration: none;
+  cursor: pointer;
+  margin: 0px;
+  padding: 0px;
+  border: none;
+  background: none;
+}
+
+p {
+  margin: 0px;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0px 20px;
+}
+@media screen and (min-width: 320px) {
+  .container {
+    width: 320px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0px 70px;
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+  }
+}
+
+.visually-hiden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  display: none;
+}
+
+.is-hidden {
+  display: none;
+}
+
+img {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+img[data-src] {
+  opacity: 0;
+}
 
 .transactionList {
   list-style: none;
@@ -7,25 +151,30 @@
 
 .transactionListContainer {
   width: 100%;
-  @media screen and (max-width: $MaxMobileWidth) {
+}
+@media screen and (max-width: 767px) {
+  .transactionListContainer {
     padding-top: 20px;
   }
 }
+
 .transactionListHeader {
   background-color: var(--white);
   border-radius: 1.875rem;
   width: 704px;
-  @media screen and (min-width: $DesktopWidth) {
-    width: 715px;
-  }
   display: flex;
   justify-content: space-between;
   padding: 0.875rem 1.25rem;
   margin-top: 0.625rem;
 }
+@media screen and (min-width: 1280px) {
+  .transactionListHeader {
+    width: 715px;
+  }
+}
 
 .transactionDetailName {
-  font-family: 'Circe';
+  font-family: "Circe";
   font-size: 1.125rem;
   font-weight: 700;
   line-height: 1.5;
@@ -72,13 +221,12 @@
 .dummyBox {
   width: 16.66%;
 }
-/////////////////////
 
 .transactionBox {
   display: flex;
   padding: 0.5625rem 1.25rem;
   border-bottom: 0.0625rem solid var(--transactions-line);
-  font-family: 'Circe';
+  font-family: "Circe";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -87,7 +235,7 @@
 }
 
 .deleteButton {
-  font-family: 'Circe';
+  font-family: "Circe";
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
@@ -136,7 +284,6 @@
   width: 1.2rem;
 }
 
-///////mobile////////
 .mobiletransactionBox {
   background-color: var(--white);
   border-radius: 0.625rem;
@@ -161,7 +308,7 @@
 }
 
 .mobileTransactionDetailName {
-  font-family: 'Circe';
+  font-family: "Circe";
   font-size: 1.125rem;
   font-weight: 700;
   line-height: 1.5;
@@ -172,7 +319,7 @@
 }
 
 .transactionDetailValue {
-  font-family: 'Circe';
+  font-family: "Circe";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -181,7 +328,7 @@
 }
 
 .mobileDeleteButton {
-  font-family: 'Circe';
+  font-family: "Circe";
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
@@ -207,7 +354,7 @@
 .editTransaction {
   cursor: pointer;
   color: var(--primary-text-color);
-  font-family: 'Circe';
+  font-family: "Circe";
   font-size: 0.875rem;
 }
 
@@ -231,7 +378,6 @@
   width: 1.2rem;
 }
 
-///////pagination////////
 .pagination {
   display: flex;
   justify-content: center;
@@ -249,4 +395,4 @@
 .pagination button.active {
   background-color: #007bff;
   color: #fff;
-}
+}/*# sourceMappingURL=tableCard.css.map */
