--- a/css/table.css
+++ b/css/table.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --white: #ffffff;
   --secondary-text-color: #fff;
@@ -154,6 +155,24 @@ img[data-src] {
 }
 @media screen and (max-width: 767px) {
   .transactionListContainer {
+    max-height: 75vh;
+    overflow-y: auto;
+    padding-top: 20px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .transactionListContainer {
+    max-height: 40vh;
+    overflow-y: auto;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .transactionListContainer {
+    display: grid; /* Zmieniamy na grid */
+    grid-template-columns: 1fr; /* Jedna kolumna */
+    grid-gap: 0.625rem; /* Odstęp między elementami .transactionList */
+    max-height: 80vh;
+    overflow-y: auto; /* Ustawiamy pasek przewijania */
     padding-top: 20px;
   }
 }
