--- a/css/table.css
+++ b/css/table.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --white: #ffffff;
   --secondary-text-color: #fff;
@@ -168,11 +167,11 @@ img[data-src] {
 }
 @media screen and (min-width: 1280px) {
   .transactionListContainer {
-    display: grid; /* Zmieniamy na grid */
-    grid-template-columns: 1fr; /* Jedna kolumna */
-    grid-gap: 0.625rem; /* Odstęp między elementami .transactionList */
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 0.625rem;
     max-height: 80vh;
-    overflow-y: auto; /* Ustawiamy pasek przewijania */
+    overflow-y: auto;
     padding-top: 20px;
   }
 }
