--- a/packages/frontend/src/components/table/table.scss
+++ b/packages/frontend/src/components/table/table.scss
@@ -1,14 +1,6 @@
 @import '../../stylesheet/main.scss';
 
 .transactionList {
-  // max-height: 40vh;
-  // overflow-y: auto;
-
-  // @media screen and (min-width: $DesktopWidth) {
-  //   max-height: 100vh;
-  //   overflow-y: visible;
-  // }
-
   list-style: none;
   margin-top: 1.25rem;
 }
@@ -25,15 +17,14 @@
   @media screen and (min-width: $TabletWidth) and (max-width: $DesktopWidth) {
     max-height: 40vh;
     overflow-y: auto;
-    // padding-top: 20px;
   }
 
   @media screen and (min-width: $DesktopWidth) {
-    display: grid; /* Zmieniamy na grid */
-    grid-template-columns: 1fr; /* Jedna kolumna */
-    grid-gap: 0.625rem; /* Odstęp między elementami .transactionList */
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 0.625rem;
     max-height: 80vh;
-    overflow-y: auto; /* Ustawiamy pasek przewijania */
+    overflow-y: auto;
     padding-top: 20px;
   }
 }
