--- a/css/table.css
+++ b/css/table.css
@@ -146,7 +146,7 @@ img[data-src] {
 
 .transactionList {
   list-style: none;
-  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .transactionListContainer {
@@ -180,6 +180,7 @@ img[data-src] {
   background-color: var(--white);
   border-radius: 1.875rem;
   width: 704px;
+  margin-bottom: 16px;
   display: flex;
   justify-content: space-between;
   padding: 0.875rem 1.25rem;
