--- a/css/chart.css
+++ b/css/chart.css
@@ -354,11 +354,13 @@ img[data-src] {
   font-weight: 700;
   border-radius: 30px;
   margin-top: 20px;
+  margin-bottom: 16px;
   padding: 0px 20px 0px 20px;
 }
 @media screen and (max-width: 767px) {
   .tableHeaderStyle {
     margin-top: 10px;
+    margin-bottom: 14px;
     width: 280px;
   }
 }
