--- a/packages/frontend/src/components/chart/chart.scss
+++ b/packages/frontend/src/components/chart/chart.scss
@@ -195,10 +195,12 @@
   font-weight: 700;
   border-radius: 30px;
   margin-top: 20px;
+  margin-bottom: 16px;
   padding: 0px 20px 0px 20px;
 
   @media screen and (max-width: $MaxMobileWidth) {
     margin-top: 10px;
+    margin-bottom: 14px;
     width: 280px;
   }
 }
