--- a/css/balance.css
+++ b/css/balance.css
@@ -156,13 +156,14 @@ img[data-src] {
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .balance_container {
+    width: 336px;
     padding: 10px 40px;
-    margin-right: 20px;
+    margin: 0;
   }
 }
 @media screen and (min-width: 1280px) {
   .balance_container {
-    margin-bottom: 30px;
+    margin: 0;
   }
 }
 
