--- a/css/navigation.css
+++ b/css/navigation.css
@@ -149,13 +149,13 @@ img[data-src] {
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .nav_container {
-    padding: 40px 0 28px;
+    padding: 40px 0 36px;
     max-width: 350px;
   }
 }
 @media screen and (min-width: 1280px) {
   .nav_container {
-    padding-top: 20px;
+    padding: 40px 0 28px;
   }
 }
 
@@ -169,6 +169,7 @@ img[data-src] {
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .nav_list {
     display: block;
+    margin: 0;
     padding: 0;
   }
 }
