--- a/css/table.css
+++ b/css/table.css
@@ -182,10 +182,10 @@ img[data-src] {
   display: flex;
   justify-content: space-between;
   padding: 0.875rem 1.25rem;
-  margin-top: 0.625rem;
 }
 @media screen and (min-width: 1280px) {
   .transactionListHeader {
+    margin-top: 46px;
     width: 715px;
   }
 }
