--- a/packages/frontend/src/components/navigation/navigation.scss
+++ b/packages/frontend/src/components/navigation/navigation.scss
@@ -4,12 +4,12 @@
   padding: 12px 30px;
 
   @media screen and (min-width: $TabletWidth) and (max-width: $DesktopWidth) {
-    padding: 40px 0 28px;
+    padding: 40px 0 36px;
     max-width: 350px;
   }
 
   @media screen and (min-width: $DesktopWidth) {
-    padding-top: 20px;
+    padding: 40px 0 28px;
   }
 }
 .nav_list {
@@ -21,6 +21,7 @@
 
   @media screen and (min-width: $TabletWidth) and (max-width: $DesktopWidth) {
     display: block;
+    margin: 0;
     padding: 0;
   }
 
