--- a/packages/frontend/src/components/currency/currency.scss
+++ b/packages/frontend/src/components/currency/currency.scss
@@ -2,7 +2,7 @@
 .currency {
   position: relative;
   margin: 0 auto;
-  margin-top: 1.938rem;
+  margin-top: 16px;
   border-radius: 1.875rem;
   color: var(--white);
   background-color: var(--accent-blue);
