--- a/css/chartFilters.css
+++ b/css/chartFilters.css
@@ -1,5 +1,3 @@
-@import '../../stylesheet/utils/breakpoints.scss';
-
 .selectContainer {
   display: flex;
   gap: 16px;
@@ -7,9 +5,11 @@
   margin-left: 0;
   margin-right: auto;
   padding-top: 30px;
-  @media (max-width: $MaxMobileWidth) {
+}
+@media (max-width: 767px) {
+  .selectContainer {
     flex-direction: column;
     padding-top: 10px;
     max-width: 280px;
   }
-}
+}/*# sourceMappingURL=chartFilters.css.map */
