--- a/css/table.css
+++ b/css/table.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -154,13 +160,13 @@ img[data-src] {
 }
 @media screen and (max-width: 767px) {
   .transactionListContainer {
-    max-height: 75vh;
+    max-height: 73vh;
     overflow-y: auto;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .transactionListContainer {
-    max-height: 40vh;
+    max-height: 55vh;
     overflow-y: auto;
   }
 }
@@ -168,8 +174,7 @@ img[data-src] {
   .transactionListContainer {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 0.625rem;
-    max-height: 80vh;
+    max-height: 75vh;
     overflow-y: auto;
   }
 }
