--- a/packages/frontend/src/components/chart/chart.scss
+++ b/packages/frontend/src/components/chart/chart.scss
@@ -5,8 +5,7 @@
     display: flex;
     flex-direction: row;
     width: 715px;
-    gap: 20px;
-    padding-left: 20px;
+    gap: 32px;
   }
 }
 
@@ -15,7 +14,7 @@
   flex-direction: column;
 
   @media screen and (max-width: $MaxMobileWidth) {
-    padding-top: 40px;
+    padding-top: 28px;
     width: 280px;
     margin-left: auto;
     margin-right: auto;
@@ -29,6 +28,7 @@
 
 .chartStyle {
   max-width: 395px;
+  padding-bottom: 60px;
 }
 
 .pieHeader {
@@ -78,18 +78,6 @@
   border-bottom: 1px solid #dcdcdf;
   box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.6);
   height: 51px;
-}
-
-.tableWrapper {
-  max-height: 30vh;
-  overflow-y: auto;
-  @media screen and (min-width: $TabletWidth) {
-    max-height: 40vh;
-  }
-  @media screen and (min-width: $DesktopWidth) {
-    max-height: 100vh;
-    overflow-y: visible;
-  }
 }
 
 .tableStyle {
