--- a/packages/frontend/src/stylesheet/base/common.scss
+++ b/packages/frontend/src/stylesheet/base/common.scss
@@ -4,8 +4,8 @@ body {
 	background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   
 
 }
@@ -20,6 +20,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
