--- a/packages/frontend/src/components/chart/chart.scss
+++ b/packages/frontend/src/components/chart/chart.scss
@@ -27,8 +27,11 @@
 }
 
 .chartStyle {
-  max-width: 395px;
+  width: 395px;
   padding-bottom: 60px;
+  @media screen and (max-width: $DesktopWidth) {
+    width: 336px;
+  }
 }
 
 .pieHeader {
@@ -46,9 +49,6 @@
 }
 
 .pieStyle {
-  height: 280px;
-  width: 288px;
-
   @media screen and (max-width: $MaxMobileWidth) {
     margin-top: 10px;
     width: 280px;
@@ -61,12 +61,14 @@
     margin-right: auto;
     margin-left: auto;
 
-    width: 320px;
-    height: 320px;
+    width: 336px;
+    height: 336px;
   }
 
   @media screen and (min-width: $DesktopWidth) {
     margin-top: 40px;
+    width: 288px;
+    height: 288px;
   }
 }
 
@@ -84,23 +86,26 @@
   border-spacing: 0;
   border-bottom: 1px solid #dcdcdf;
   width: 395px;
-
+  @media screen and (max-width: $DesktopWidth) {
+    width: 336px;
+  }
   @media screen and (max-width: $MaxMobileWidth) {
     width: 280px;
   }
 }
-
 .tableFooter {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 15px;
   padding-top: 15px;
+  @media screen and (max-width: $MaxMobileWidth) {
+    align-items: stretch;
+  }
 }
-
 .columnFooterStatsStyle {
   display: flex;
-  align-items: center;
+
   justify-content: space-between;
   width: 395px;
   border-bottom: none;
@@ -114,7 +119,10 @@
   letter-spacing: 0em;
 
   @media screen and (max-width: $MaxMobileWidth) {
-    max-width: 280px;
+    width: 280px;
+  }
+  @media screen and (max-width: $DesktopWidth) {
+    max-width: 336px;
   }
 }
 
