--- a/css/chart.css
+++ b/css/chart.css
@@ -176,6 +176,11 @@ img[data-src] {
     padding-top: 30px;
   }
 }
+@media screen and (min-width: 1280px) {
+  .statsSheet {
+    margin-left: 69px;
+  }
+}
 
 .chartStyle {
   width: 395px;
