--- a/packages/frontend/src/components/balance/balance.css
+++ b/packages/frontend/src/components/balance/balance.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -150,19 +156,20 @@ img[data-src] {
   padding: 8px 30px;
   background-color: var(--white);
   border-radius: 30px;
-  margin-bottom: 0px;
+  margin-bottom: 32px;
   margin-right: auto;
   margin-left: auto;
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .balance_container {
+    width: 336px;
     padding: 10px 40px;
-    margin-right: 20px;
+    margin: 0;
   }
 }
 @media screen and (min-width: 1280px) {
   .balance_container {
-    margin-bottom: 30px;
+    margin: 0;
   }
 }
 
