--- a/packages/frontend/src/components/chart/chart.css
+++ b/packages/frontend/src/components/chart/chart.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -149,8 +155,7 @@ img[data-src] {
     display: flex;
     flex-direction: row;
     width: 715px;
-    gap: 20px;
-    padding-left: 20px;
+    gap: 32px;
   }
 }
 
@@ -160,10 +165,9 @@ img[data-src] {
 }
 @media screen and (max-width: 767px) {
   .statsSheet {
-    padding-top: 40px;
+    padding-top: 28px;
     width: 280px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0;
   }
 }
 @media screen and (min-width: 768px) {
@@ -172,9 +176,20 @@ img[data-src] {
     padding-top: 30px;
   }
 }
+@media screen and (min-width: 1280px) {
+  .statsSheet {
+    margin-left: 69px;
+  }
+}
 
 .chartStyle {
-  max-width: 395px;
+  width: 395px;
+  padding-bottom: 60px;
+}
+@media screen and (max-width: 1280px) {
+  .chartStyle {
+    width: 336px;
+  }
 }
 
 .pieHeader {
@@ -192,10 +207,6 @@ img[data-src] {
   }
 }
 
-.pieStyle {
-  height: 280px;
-  width: 288px;
-}
 @media screen and (max-width: 767px) {
   .pieStyle {
     margin-top: 10px;
@@ -209,13 +220,15 @@ img[data-src] {
     margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
-    width: 320px;
-    height: 320px;
+    width: 336px;
+    height: 336px;
   }
 }
 @media screen and (min-width: 1280px) {
   .pieStyle {
     margin-top: 40px;
+    width: 288px;
+    height: 288px;
   }
 }
 
@@ -234,6 +247,11 @@ img[data-src] {
   border-bottom: 1px solid #dcdcdf;
   width: 395px;
 }
+@media screen and (max-width: 1280px) {
+  .tableStyle {
+    width: 336px;
+  }
+}
 @media screen and (max-width: 767px) {
   .tableStyle {
     width: 280px;
@@ -247,10 +265,14 @@ img[data-src] {
   gap: 15px;
   padding-top: 15px;
 }
+@media screen and (max-width: 767px) {
+  .tableFooter {
+    align-items: stretch;
+  }
+}
 
 .columnFooterStatsStyle {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   width: 395px;
   border-bottom: none;
@@ -265,7 +287,12 @@ img[data-src] {
 }
 @media screen and (max-width: 767px) {
   .columnFooterStatsStyle {
-    max-width: 280px;
+    width: 280px;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .columnFooterStatsStyle {
+    max-width: 336px;
   }
 }
 
@@ -338,11 +365,13 @@ img[data-src] {
   font-weight: 700;
   border-radius: 30px;
   margin-top: 20px;
+  margin-bottom: 16px;
   padding: 0px 20px 0px 20px;
 }
 @media screen and (max-width: 767px) {
   .tableHeaderStyle {
     margin-top: 10px;
+    margin-bottom: 14px;
     width: 280px;
   }
 }
