--- a/packages/frontend/src/components/currency/currency.css
+++ b/packages/frontend/src/components/currency/currency.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -146,9 +152,8 @@ img[data-src] {
 
 .currency {
   position: relative;
-  height: 100%;
   margin: 0 auto;
-  margin-top: 1.938rem;
+  margin-top: 16px;
   border-radius: 1.875rem;
   color: var(--white);
   background-color: var(--accent-blue);
@@ -166,7 +171,7 @@ img[data-src] {
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .currency {
-    width: 336px;
+    max-width: 336px;
     background-image: url("../../images/svg/wave-desktop.svg");
     background-size: contain;
   }
@@ -232,7 +237,6 @@ img[data-src] {
 
 @media (min-width: 768px) {
   .currency {
-    margin-left: 0.625rem;
     width: 363px;
   }
   .loader {
