--- a/packages/frontend/src/components/header/header.css
+++ b/packages/frontend/src/components/header/header.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -149,8 +155,6 @@ img[data-src] {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: var(--white);
@@ -158,18 +162,8 @@ img[data-src] {
 @media screen and (min-width: 768px) {
   .Header {
     height: 80px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .Header {
-    padding-left: 85px;
-    padding-right: 85px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
 
