--- a/packages/frontend/src/components/mainButton/mainButton.css
+++ b/packages/frontend/src/components/mainButton/mainButton.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -181,7 +187,6 @@ img[data-src] {
   color: var(--accent-blue);
   background-color: var(--white);
   border: 2px solid var(--accent-blue);
-  padding-top: 10px;
 }
 .main_btn:hover {
   color: var(--white);
