--- a/packages/frontend/src/components/modalLogout/modalLogout.css
+++ b/packages/frontend/src/components/modalLogout/modalLogout.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -146,14 +152,16 @@ img[data-src] {
 
 .logoutModalOverlay {
   opacity: 0.4;
-  background-color: var(--gray-text-modal);
   position: fixed;
   width: 100%;
   height: 100%;
+  text-align: center;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
-  text-align: center;
+  background-color: rgba(53, 53, 53, 0.5);
+  backdrop-filter: blur(2px);
+  z-index: 999;
 }
 
 .logoutModalContainer {
@@ -183,16 +191,18 @@ img[data-src] {
   justify-content: center;
   display: flex;
   gap: 20px;
-}
-.logoutModalContainer .logoutModalContent .confirmButtons button {
-  padding: 10px;
-  border: 1px solid var(--white);
-  border-radius: 6px;
-}
-.logoutModalContainer .logoutModalContent .confirmButtons .cancelButton {
-  background-color: #3d4be9;
-  color: #ffffff;
-}
-.logoutModalContainer .logoutModalContent .confirmButtons .logoutButton {
-  background-color: #e2e2e2;
+  /* button {
+    padding: 10px;
+    border: 1px solid var(--white);
+    border-radius: 6px;
+  }
+
+  .cancelButton {
+    background-color: $primaryColor;
+    color: #ffffff;
+  }
+
+  .logoutButton {
+    background-color: $secondaryColor;
+  } */
 }/*# sourceMappingURL=modalLogout.css.map */
