--- a/packages/frontend/src/components/modalLogout/modalLogout.scss
+++ b/packages/frontend/src/components/modalLogout/modalLogout.scss
@@ -6,14 +6,16 @@ $shadowColor: rgba(0, 0, 0, 0.15);
 
 .logoutModalOverlay {
   opacity: 0.4;
-  background-color: var(--gray-text-modal);
   position: fixed;
   width: 100%;
   height: 100%;
+  text-align: center;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
-  text-align: center;
+  background-color: rgba(53, 53, 53, 0.5);
+  backdrop-filter: blur(2px);
+  z-index: 999;
 }
 
 .logoutModalContainer {
@@ -46,7 +48,7 @@ $shadowColor: rgba(0, 0, 0, 0.15);
       display: flex;
       gap: 20px;
 
-      button {
+      /* button {
         padding: 10px;
         border: 1px solid var(--white);
         border-radius: 6px;
@@ -59,7 +61,7 @@ $shadowColor: rgba(0, 0, 0, 0.15);
 
       .logoutButton {
         background-color: $secondaryColor;
-      }
+      } */
     }
   }
 }
