--- a/packages/frontend/src/components/navigation/navigation.css
+++ b/packages/frontend/src/components/navigation/navigation.css
@@ -58,8 +58,8 @@ body {
   background-color: var(--primary-background-color);
   display: flex;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 h1,
@@ -72,6 +72,12 @@ h4 {
 ul {
   margin: 0px;
   padding: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -145,30 +151,31 @@ img[data-src] {
 }
 
 .nav_container {
-  padding: 12px 30px;
+  max-width: 280px;
+  padding: 12px 44px 12px;
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .nav_container {
-    padding: 40px 0 28px;
+    padding: 40px 0 36px;
     max-width: 350px;
   }
 }
 @media screen and (min-width: 1280px) {
   .nav_container {
-    padding-top: 20px;
+    padding: 40px 0 28px;
   }
 }
 
 .nav_list {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
   padding: 0;
   width: 100%;
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .nav_list {
     display: block;
+    margin: 0;
     padding: 0;
   }
 }
