--- a/packages/frontend/src/components/passwordSecureBar/passwordStrengthBar.module.css
+++ b/packages/frontend/src/components/passwordSecureBar/passwordStrengthBar.module.css
@@ -1,4 +1,8 @@
-.strengthBar {
+.strengthBar,
+.strengthBarWeek,
+.strengthBarModerate,
+.strengthBarStrong {
+  display: block;
   width: 100%;
   height: 4px;
   background-color: #e5f1ef;
@@ -7,24 +11,16 @@
 }
 
 .strengthBarWeek {
-  background-color: #FF6596;
+  background-color: #ff6596;
   width: 25%;
-  height: 4px;
-  border-radius: 6px;
-
 }
 
 .strengthBarModerate {
   background-color: #fcff65;
   width: 50%;
-  height: 4px;
-  border-radius: 6px;
-
 }
 
 .strengthBarStrong {
-  background-color: #24CCA7;
+  background-color: #24cca7;
   width: 100%;
-  height: 4px;
-  border-radius: 6px;
 }
