--- a/packages/frontend/src/components/mainButton/mainButton.scss
+++ b/packages/frontend/src/components/mainButton/mainButton.scss
@@ -42,6 +42,7 @@
   color: var(--accent-blue);
   background-color: var(--white);
   border: 2px solid var(--accent-blue);
+  line-height: 50px;
 
   &:hover {
     color: var(--white);
