doubled files removed

--- a/css/modalLogout.css
+++ b/css/modalLogout.css
@@ -150,45 +150,46 @@ img[data-src] {
   opacity: 0;
 }
 
-.Button, .main_btn, .logo_btn, .register_btn {
-  display: inline-block;
-  height: 50px;
-  width: 280px;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 27px;
+.logoutModalOverlay {
+  opacity: 0.4;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   text-align: center;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  color: var(--white);
-  border-radius: 20px;
-  text-align: center;
-  transition: 100ms linear, color 100ms linear, border-color 100ms linear;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(53, 53, 53, 0.5);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  z-index: 999;
 }
 
-.register_btn {
-  background-color: var(--accent-green);
-  border: transparent;
-}
-.register_btn:hover {
-  background-color: #05bd95;
-}
-
-.logo_btn {
-  background-color: var(--accent-green);
-  border: transparent;
-  margin-bottom: 20px;
-}
-.logo_btn:hover {
-  background-color: #05bd95;
-}
-
-.main_btn {
-  color: var(--accent-blue);
+.logoutModalContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 320px;
+  height: 180px;
   background-color: var(--white);
-  border: 2px solid var(--accent-blue);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  z-index: 9999;
+  border-radius: 14px;
 }
-.main_btn:hover {
-  color: var(--white);
-  background-color: var(--accent-blue);
-}/*# sourceMappingURL=mainButton.css.map */
+.logoutModalContainer .logoutModalContent {
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.logoutModalContainer .logoutModalContent .logoutInfo {
+  font-size: 16px;
+}
+.logoutModalContainer .logoutModalContent .confirmButtons {
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  gap: 20px;
+}/*# sourceMappingURL=modalLogout.css.map */
